--- a/text.html
+++ b/text.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduTech</title>
-    <link rel="icon" href="./assets/baddo img.jpg" >
-    <link rel="stylesheet" href="/text.css">
+    <link rel="icon" href="assets/baddo img.jpg" >
+    <link rel="stylesheet" href="text.css">
 </head>
 <body>
     <div class="wrap">
      <div class="heading">
-        <img  style="width: 80px ; height: 80px; margin-left: 5px; margin-bottom: 5px; margin-top: 10px;"      src="./assets/c++.png" alt="">
+        <img  style="width: 80px ; height: 80px; margin-left: 5px; margin-bottom: 5px; margin-top: 10px;"      src="assets/c++.png" alt="">
        <nav>
         <ul>
             <li><a href="#">HOME</a></li>
@@ -23,17 +23,15 @@
 
   <div class="hero">
 <div class="herotext">
-    <h1 class="action">MAKE REMOTE WORK</h1>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex adipisci in vitae consectetur ipsa 
-    <br>blanditiis doloremque rem quos iure possimus ullam temporibus ipsum similique <br>laboriosam, non quod, nemo natus? Minus?</P>
-<button>Click me</button>
-<button>More about me</button>
-</div>
+ <h1 class="action">MAKE REMOTE WORK</h1>
+ <P>Lorem ipsum dolor sit amet consecteturadipisicing elit. Ex adipisci in <br>vitae consectetur ipsa 
+    blanditiis doloremque rem quos iure possimus ullam temporibus ipsum similique<br> laboriosam, non quod,nemo natus? Minus?</P>
+    <button>Click me</button>
+    <button>More about me</button>
+    </div>
 <div class="hero-pic">
-<img  class="mac" style="width: 200px;   height: 200px; 
-   border-radius: 100%; box-shadow:3px -4px 4px 
-   hsl(50, 90%, 80%);"
-    src="./assets/elite image.jfif" alt="car">
+<img  class="mac" style="width: 200px;   height: 200px;  border-radius: 100%; box-shadow:3px -4px 4px  hsl(50, 90%, 80%);"
+    src="assets/elite image.jfif" alt="car">
 </div>
 </div>
 
